--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,7 @@
     "highlight.js": "^9.10.0",
     "lodash.throttle": "^4.1.1",
     "marked": "^0.8.2",
-    "node-sass": "^4.13.1",
+    "sass": "^1.77.6",
     "nprogress": "^0.2.0",
     "sass-loader": "^8.0.2",
     "socket.io-client": "^2.1.1",
