--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.19.0",
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.16.0",
     "compression": "^1.7.3",
@@ -34,9 +34,10 @@
     "mysql2": "^1.4.2",
     "preview-link": "0.0.0",
     "randomcolor": "^0.4.4",
+    "sass": "^1.77.6",
     "sequelize": "^3.33.0",
     "sequelize-cli": "^4.1.1",
-    "sharp": "^0.22.1",
+    "sharp": "^0.33.4",
     "socket.io": "^2.1.1",
     "url-slug": "^2.0.0"
   },
